feat: 完成数据库封装.

--- a/views/self.html
+++ b/views/self.html
@@ -43,6 +43,10 @@
         <input type="radio" name="gender"> 女
         <input type="radio" name="gender"> 保密
       </div>
+      <label>
+        个人描述：<br>
+        <textarea name="" id="" cols="30" rows="10" placeholder="这个人很懒，什么也没写"></textarea>
+      </label>
       <button>确认修改</button>
       <button>修改密码</button>
     </form>
