--- a/public/css/self.css
+++ b/public/css/self.css
@@ -26,7 +26,7 @@ form > label[for=avatar] {
   justify-content: center;
   align-items: center;
   color: #fff;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 form > label,
